k8s-yaml/subdomain/deploy-web1.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web1
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
        - image: openliberty/open-liberty:webProfile8-java8-openj9 
          name: openliberty
          ports:
            - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc1
spec:
  selector:
    app: web1
  ports:
    - port: 9080
