k8s-yaml/subdomain/deploy-web2.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
        - image: 'httpd'
          name: apache2-httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc2
spec:
  selector:
    app: web2
  ports:
    - port: 80
