k8s-yaml/subdomain/deploy-web3.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web3
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: web3
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc3
spec:
  selector:
    app: web3
  ports:
    - port: 80
