k8s-yaml/subdomain/ingress-tls.yml
#
# https://cloud.ibm.com/docs/containers/cs_ingress.html#annotations
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingres-dev
  annotations:
     ingress.bluemix.net/redirect-to-https: "True"
     ingress.bluemix.net/rewrite-path: "serviceName=web-svc1 rewrite=/;serviceName=web-svc2 rewrite=/;serviceName=web-svc3 rewrite=/"
spec:
   tls:
   - hosts:
     - dev.iks1.jp-tok.containers.appdomain.cloud
     secretName: iks1
   rules:
   - host: dev.iks1.jp-tok.containers.appdomain.cloud
     http:
       paths:
       - path: /
         backend:
           serviceName: web-svc1
           servicePort: 9080
       - path: /apl2
         backend:
           serviceName: web-svc2
           servicePort: 80
       - path: /apl3
         backend:
           serviceName: web-svc3
           servicePort: 80
